manipulating localisation files if locale setting is set in config. Trying to aviod accept language feature

--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "commander": "^2.7.1",
     "confidence": "^1.0.0",
     "decompress-zip": "^0.2.0",
+    "deepmerge": "^0.2.10",    
     "eslint": "^2.2.0",
     "eslint-config-airbnb": "^6.0.2",
     "front-matter": "^1.0.0",
+    "fs-extra": "^0.4.0",
     "glob": "^5.0.14",
     "glue": "^2.0.0",
     "good": "^5.1.2",
