--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/stencil-cli",
-  "version": "1.3.10",
+  "version": "1.3.16",
   "description": "CLI tool to run BigCommerce Stores locally for theme development.",
   "main": "index.js",
   "engines": {
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/bigcommerce/stencil-cli",
   "dependencies": {
-    "@bigcommerce/stencil-paper": "^1.1.6",
+    "@bigcommerce/stencil-paper": "^1.1.9",
     "@bigcommerce/stencil-styles": "^1.0.2",
     "accept-language-parser": "^1.0.2",
     "archiver": "^0.14.4",
@@ -47,6 +47,7 @@
     "eslint-config-airbnb": "^6.0.2",
     "front-matter": "^1.0.0",
     "fs-extra": "^0.30.0",
+    "github": "^8.1.0",
     "glob": "^5.0.14",
     "glue": "^2.0.0",
     "good": "^5.1.2",
@@ -69,10 +70,12 @@
     "recursive-readdir": "^1.3.0",
     "rewire": "^2.5.1",
     "semver": "^5.3.0",
+    "simple-git": "^1.65.0",
     "sinon": "^1.14.1",
     "tarjan-graph": "^0.3.0",
     "tmp": "0.0.26",
     "upath": "^0.1.7",
+    "uuid4": "^1.0.0",
     "when": "^3.7.7",
     "wreck": "^5.4.0"
   },
